chore: 🤖 fix product name on storybook home page

--- a/packages/docs/src/pages/home.stories.mdx
+++ b/packages/docs/src/pages/home.stories.mdx
@@ -4,4 +4,4 @@ import { Meta } from '@storybook/addon-docs'
 
 # Libellum DS
 
-Design Sytem utilizado no **[certificandome.com.br](https://certificandome.com.br)**
+Design Sytem utilizado no **[libellum.app.br](https://libellum.app.br)**
